# context-guide

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requeriments.txt  requirements.txt  run.py  setup.py  test_run.py
.github/workflows/: python-tests.yml
context_guide/: __init__.py  cli.py  context.py  project_templates.py  prompt_generator.py  watcher.py
context_guide/mcp_server/: __init__.py  cursor_integration.py  server.py
docs/: arquiteture.md  components.md  development-guide.md  features.md  guia-completo.md  overview.md  user-guide.md
src/: __init__.py  context.py  main.py  prompt_generator.py  watcher.py
test_project/docs/: architecture.md  components.md  features.md  overview.md
tests/: __init__.py  test_context_guide.py  test_mcp_server.py
