[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-guide"
version = "0.1.0"
description = "Ferramenta de contexto para IDEs assistidas por IA"
readme = "README.md"
authors = [
    {name = "Diego Nogueira", email = "devnogueiradiego@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "llama-index>=0.9.0",
    "chromadb>=0.4.18",
    "watchdog>=3.0.0",
    "pyperclip>=1.8.2",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/DiegoNogueiraDev/context-guide"
"Bug Tracker" = "https://github.com/DiegoNogueiraDev/context-guide/issues"

[project.scripts]
context-guide = "context_guide.cli:main"

[tool.setuptools]
packages = ["context_guide"]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*" 