[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-guide"
version = "0.1.0"
description = "Ferramenta de contexto para IDEs assistidas por IA"
readme = "README.md"
authors = [
    {name = "Diego Nogueira", email = "devnogueiradiego@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "llama-index>=0.9.0",
    "chromadb>=0.4.18",
    "watchdog>=3.0.0",
    "pyperclip>=1.8.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
mcp = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.4.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/DiegoNogueiraDev/context-guide"
"Bug Tracker" = "https://github.com/DiegoNogueiraDev/context-guide/issues"

[project.scripts]
context-guide = "context_guide.cli:main"

[tool.setuptools]
packages = ["context_guide"]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*" 